.ejs template files were implemented and are working

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -4,6 +4,7 @@
   <title>TinyApp</title>
 </head>
 <body>
+  <%- include("partials/_header") %>
   <h1>Shortened Links:</h1>
    <ul>
     <% for(var link in urls){ %>
