--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -4,6 +4,7 @@
   <title>TinyApp</title>
 </head>
 <body>
-    <p> <%= shortURL %> </p>
+    <p> Original url: <%= longURL %> </p>
+    <p> Shortened url: <%= shortURL %> </p>
 </body>
 </html>
