Added ability to update existing url on each unique url page

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -15,6 +15,7 @@
     <tr>
       <td> <%= urls[link] %></td>
       <td> http://www.<%= link %>.com </td>
+      <td><form method="POST" action="/urls/<%= link %>/delete"><button>Delete</button></form></td>
     </tr>
     <% } %>
   </table>
