--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>TinyApp</title>
+  <link type="text/css" rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
   <%- include("partials/_header") %>
