--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,7 @@
+
+
 body{
+  font-family: 'Roboto', sans-serif;
   margin-top: 100px;
   display:flex;
   flex-direction: column;
@@ -7,3 +10,24 @@ body{
   background-color: white;
 }
 
+h1{
+  color:#757575;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 3em;
+}
+
+.delete:hover{
+  background-color:#F44336;
+  color:white;
+}
+
+.edit:hover{
+  background-color: #03A9F4;
+  color: white;
+}
+
+input{
+  color:#03A9F4;
+}
