--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -2,27 +2,30 @@
 <html lang="en">
 <head>
   <title>TinyApp</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
   <%- include("partials/_header") %>
-  <h1>Shortened Links:</h1>
+ <!-- <h1><span style="font-size:1em;color:#03A9F4">TinyApp &nbsp</span>Shorten your urls!</h1> -->
   <table style="width:50%">
     <tr>
-      <td><strong>Original URL</strong></td>
-      <td><strong>Shortened URL</strong></td>
+      <td style="font-size: 18px"><strong>Original URL:</strong></td>
+      <td style="font-size: 18px"><strong>Shortened URL:</strong></td>
     </tr>
+    <tr></tr>
+    <tr></tr>
       <% for(let link in urls){ %>
     <tr>
       <td> <%= urls[link] %></td>
       <td> http://www.<%= link %>.com </td>
-      <td><button><a href="/urls/<%=link%>"</a>Edit</button></td>
-      <td><form method="POST" action="/urls/<%= link %>/delete"><button>Delete</button></form></td>
+      <td><button class="edit"><a class="edit" href="/urls/<%=link%>"</a>Edit</button></td>
+      <td><form method="POST" action="/urls/<%= link %>/delete"><button class="delete">Delete</button></form></td>
     </tr>
     <% } %>
   </table>
   <br>
-   <a href="http://localhost:8080/urls/new">Shorten new URL</a>
+   <a class="edit" href="http://localhost:8080/urls/new">Shorten new URL</a>
 </body>
 </html>
 
