--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head></head>
-  <body style="font-size:20px; padding:50px;">
+  <head>
+  <title>TinyApp</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link type="text/css" rel="stylesheet" href="/stylesheets/style.css">
+</head>
+  <body>
     <% include partials/_header %>
-    <form action="/urls/new" method="POST" style="margin:150px;">
+    <form style="margin-top:50px" action="/urls" method="POST" style="margin:150px;">
       <label for="longURL">Enter a URL:</label>
       <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
-      <input type="submit" value="Submit">
+      <input class="edit" type="submit" value="Submit">
     </form>
   </body>
 </html>
