--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
   <title>TinyApp</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link type="text/css" rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-    <p> <%= longURL %>   <strong>===></strong>   <%= shortURL %> </p>
+    <%- include("partials/_header") %>
+    <p> <%= longURL %>   <strong style="color:#03A9F4">===></strong>   <%= shortURL %> </p>
     <form action="/urls/<%=shortURL%>/update" method="POST">
       <input id="longURL" name="longURL" type="text" placeholder="<%= longURL %>" style="width: 300px">
-      <input type="submit" value="Update">
+      <input class="edit" type="submit" value="Update">
     </form>
 </body>
 </html>
