Updated stylsheet and css on each page

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,1 +1,1 @@
-<h1><span style="font-size:1em;color:#03A9F4">TinyApp: &nbsp</span>Shorten your urls!</h1>
+<h1><span style="font-size:1em;color:#03A9F4">TinyApp: &nbsp</span><span id="headerRem">Shorten your urls!</span></h1>
