--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -12,6 +12,7 @@
       <input id="longURL" name="longURL" type="text" placeholder="<%= longURL %>" style="width: 300px">
       <input class="edit" type="submit" value="Update">
     </form>
+    <button id="returnHome" class="edit"><a class="edit" href="/urls"</a>Return home</button>
 </body>
 </html>
 
