--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,3 @@
-
-
 body{
   font-family: 'Roboto', sans-serif;
   margin-top: 100px;
@@ -28,6 +26,35 @@ h1{
   color: white;
 }
 
+button{
+  background-color:white;
+  border: 1px solid #BDBDBD;
+  border-radius: 3px;
+  font-size:1em;
+}
+
+a{
+  text-decoration: none;
+}
+
+a:visited{
+  color:black;
+}
+
 input{
   color:#03A9F4;
+}
+
+#returnHome{
+  margin-top: 50px;
+}
+
+#headerRem{
+  letter-spacing: 3px;
+  -webkit-transition: letter-spacing 1s;
+  transition: letter-spacing: 1s;
+}
+
+#headerRem:hover{
+ letter-spacing: 0.10px;
 }
