--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <title>TinyApp</title>
+  <script src="https://use.fontawesome.com/c7d7b636c5.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
   <%- include("partials/_header") %>
- <!-- <h1><span style="font-size:1em;color:#03A9F4">TinyApp &nbsp</span>Shorten your urls!</h1> -->
   <table style="width:50%">
     <tr>
       <td style="font-size: 18px"><strong>Original URL:</strong></td>
@@ -19,13 +19,13 @@
     <tr>
       <td> <%= urls[link] %></td>
       <td> http://www.<%= link %>.com </td>
-      <td><button class="edit"><a class="edit" href="/urls/<%=link%>"</a>Edit</button></td>
-      <td><form method="POST" action="/urls/<%= link %>/delete"><button class="delete">Delete</button></form></td>
+      <td><button class="edit"><a class="edit" href="/urls/<%=link%>"</a>Edit <i class="fa fa-pencil" aria-hidden="true"></i></button></td>
+      <td><form method="POST" action="/urls/<%= link %>/delete"><button class="delete">Delete <i class="fa fa-trash-o" aria-hidden="true"></i></button></form></td>
     </tr>
     <% } %>
   </table>
   <br>
-   <a class="edit" href="http://localhost:8080/urls/new">Shorten new URL</a>
+   <button class="edit"><a class="edit" href="http://localhost:8080/urls/new">Shorten new URL</a></button>
 </body>
 </html>
 
