--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -12,5 +12,6 @@
       <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
       <input class="edit" type="submit" value="Submit">
     </form>
+    <button id="returnHome" class="edit"><a class="edit" href="/urls"</a>Return home</button>
   </body>
 </html>
