--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,1 +1,14 @@
+  <% if (username) { %>
+<form method="POST" action="/logout">
+    <input id="username" name="username" type="text" placeholder="Username" value="<%=username%>">
+    <input type="submit" value="Logout">
+</form>
+  <% } else { %>
+  <form method="POST" action="/login">
+    <input id="username" name="username" type="text" placeholder="Username" value="<%=username%>">
+    <input type="submit" value="Login">
+</form>
+<% } %>
+
+
 <h1><span style="font-size:1em;color:#03A9F4">TinyApp: &nbsp</span><span id="headerRem">Shorten your urls!</span></h1>
