--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -7,5 +7,13 @@
 </head>
   <body>
     <% include partials/_header %>
+    <h2>To create your account, please enter a username and password in the fields below:</h1>
+    <form action="/register" method="POST">
+      <input id="email" type="email" name="email" placeholder="email">
+      <br>
+      <input id="password" type="password" name="password" placeholder="password">
+      <br>
+      <input class="edit" type="submit" value="Submit">
+    </form>
   </body>
 </html>
