--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -7,8 +7,8 @@
 </head>
   <body>
     <% include partials/_header %>
-    <h2>To create your account, please enter an email and password in the fields below:</h1>
-    <form action="/register" method="POST">
+    <h2>Enter your email and password to login:</h1>
+    <form action="/login" method="POST">
       <input id="email" type="email" name="email" placeholder="email">
       <br>
       <input id="password" type="password" name="password" placeholder="password">
