--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,7 +17,7 @@
     <tr></tr>
       <% for(let link in urls){ %>
     <tr>
-      <td> <a href="<%= urls[link]%>"><%= urls[link]%></td>
+      <td> <a href=<%= urls[link].longURL%>><%= urls[link].longURL%></td>
       <td> <a href="/u/<%= link %>"><%= link %></a> </td>
       <td><button class="edit"><a class="edit" href="/urls/<%=link%>"</a>Edit <i class="fa fa-pencil" aria-hidden="true"></i></button></td>
       <td><form method="POST" action="/urls/<%= link %>/delete"><button class="delete">Delete <i class="fa fa-trash-o" aria-hidden="true"></i></button></form></td>
