Provides error codes if urls don't exist, added delete button to views/urls_show.ejs

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
   <% if (email) { %>
-<form method="POST" action="/logout">
+<form id="username" method="POST" action="/logout">
     <input id="username" name="username" type="text" placeholder="Username" value="<%= email %>">
     <button class="edit" type="submit">Logout</button>
 </form>
