--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,12 +8,28 @@ body{
   background-color: white;
 }
 
+input{
+  font-size: 1em;
+}
+
 h1{
   color:#757575;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   font-size: 3em;
+}
+
+form{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#username{
+  border: none;
+  text-align: center;
 }
 
 .delete:hover{
@@ -34,6 +50,7 @@ button{
 }
 
 a{
+  color:black;
   text-decoration: none;
 }
 
