All technical specifications met. CSS to be updated

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -3,6 +3,7 @@
     <input id="username" name="username" type="text" placeholder="Username" value="<%= email %>">
     <button class="edit" type="submit">Logout</button>
 </form>
+<button class="edit"><a href="/urls">My Links</a></button>
   <% } else { %>
   <button class="edit"><a class="edit" href="http://localhost:8080/login">Login</a></button>
   <button class="edit"><a class="edit" href="http://localhost:8080/register">Create account</a></button>
