--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,80 @@
+#header{
+  margin-top: 25px;
+  margin-right:-500px;
+  width: 300px;
+  height: 30px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: flex-end;
+  font-size: 14px;
+}
+
+#header2{
+  margin-top: 25px;
+  margin-right:-500px;
+  width: 330px;
+  height: 30px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: center;
+  font-size: 14px;
+}
+
+#username{
+
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+}
+
 body{
   font-family: 'Roboto', sans-serif;
-  margin-top: 100px;
+  margin-top: 25px;
   display:flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: white;
+}
+
+#urls{
+  margin-top: 50px;
+
+}
+
+table{
+  min-width: 640px;
+  padding: 0px;
+  border-spacing: 0px;
+  font-size: 16px;
+  margin-top:25px;
+}
+
+table tr{
+  padding-top:0px;
+  padding-bottom: 0px;
+}
+
+table th{
+  text-align: center;
+}
+
+td{
+  padding-top:15px;
+  padding-bottom: 15px;
+  padding-right: 5px;
+  padding-left: 5px;
+  text-align: center;
+}
+
+table tr:nth-child(even){
+  background-color: #F5F5F5;
+}
+
+.table td{
+  padding: 0px;
+  height:30px;
 }
 
 input{
@@ -13,18 +82,45 @@ input{
 }
 
 h1{
+  margin-top: 50px;
   color:#757575;
+  font-size: 64px;
+  font-weight: bold;
+}
+
+h2{
+  margin-top: 0px;
+  margin-bottom:50px;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-size: 3em;
+  justify-content: center;
 }
 
 form{
+  display:inline-block;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/*.userform{
+  font-size: 16px;
   display:flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}*/
+
+#updateURL{
+ /* display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;*/
+}
+
+input{
+  height:25px;
+  color:#03A9F4;
 }
 
 #username{
@@ -43,14 +139,15 @@ form{
 }
 
 button{
+  height:25px;
   background-color:white;
   border: 1px solid #BDBDBD;
   border-radius: 3px;
-  font-size:1em;
+  font-size:16px;
 }
 
 a{
-  color:black;
+  color:#03A9F4;
   text-decoration: none;
 }
 
@@ -58,15 +155,12 @@ a:visited{
   color:black;
 }
 
-input{
-  color:#03A9F4;
-}
 
 #returnHome{
   margin-top: 50px;
 }
 
-#headerRem{
+/*#headerRem{
   letter-spacing: 3px;
   -webkit-transition: letter-spacing 1s;
   transition: letter-spacing: 1s;
@@ -82,4 +176,4 @@ input{
 @keyframes shrinkSpacing {
   from { letter-spacing:4px; }
   to  { letter-spacing: -2px; }
-}
+}*/
