--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,15 +1,18 @@
   <% if (email) { %>
-<form id="username" method="POST" action="/logout">
-    <input id="username" name="username" type="text" placeholder="Username" value="<%= email %>">
+<div id = "header2">
+  <form id="username" method="POST" action="/logout">
+    <input id="username" name="username" type="text" placeholder="Username" value="Hi, <%= email %>">
     <button class="edit" type="submit">Logout</button>
-</form>
-<button class="edit"><a href="/urls">My Links</a></button>
+  </form>
+  <button class="edit"><a href="/urls">My Links</a></button>
+</div>
   <% } else { %>
+<div id = "header">
   <button class="edit"><a class="edit" href="http://localhost:8080/login">Login</a></button>
   <button class="edit"><a class="edit" href="http://localhost:8080/register">Create account</a></button>
-
+</div>
 <% } %>
 
 
-<h1><span style="font-size:1em;color:#03A9F4">TinyApp: &nbsp</span><span id="headerRem">Shorten your urls!</span></h1>
+<h1><span style="font-size:1em;color:#03A9F4">TinyApp<span style="font-weight:lighter">&trade;</span>: &nbsp</span><span id="headerRem">Shorten your urls!</span></h1>
 
