--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <title>TinyApp</title>
+  <title>TinyApp&trade;</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="/stylesheets/style.css">
 </head>
   <body>
     <% include partials/_header %>
     <h2>To create your account, please enter an email and password in the fields below:</h1>
-    <form action="/register" method="POST">
+    <form class="userForm" action="/register" method="POST">
       <input id="email" type="email" name="email" placeholder="email">
       <br>
       <input id="password" type="password" name="password" placeholder="password">
       <br>
-      <input class="edit" type="submit" value="Submit">
+      <button class="edit" type="submit" value="submit">Submit</button>
     </form>
   </body>
 </html>
