--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <title>TinyApp</title>
+  <title>TinyApp&trade;</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="/stylesheets/style.css">
 </head>
   <body>
     <% include partials/_header %>
     <h2>Enter your email and password to login:</h1>
-    <form action="/login" method="POST">
+    <form class="userForm" action="/login" method="POST">
       <input id="email" type="email" name="email" placeholder="email">
       <br>
       <input id="password" type="password" name="password" placeholder="password">
       <br>
-      <input class="edit" type="submit" value="Submit">
+      <button class="edit" type="submit" value="submit">Login</button>
     </form>
   </body>
 </html>
