--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>TinyApp</title>
+  <title>TinyApp&trade;</title>
+  <script src="https://use.fontawesome.com/c7d7b636c5.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-    <%- include("partials/_header") %>
-    <p> <%= longURL %>   <strong style="color:#03A9F4">===></strong>   <%= shortURL %> </p>
+  <%- include("partials/_header") %>
+  <p> <a href="<%= longURL %>"><%= longURL %></a> <strong style="color:#03A9F4">===></strong> <a href="http://localhost:8080/u/<%=shortURL%>">http://localhost:8080/<%= shortURL %></a></p>
+  <div id="updateURL">
     <form action="/urls/<%=shortURL%>/update" method="POST">
-      <input id="longURL" name="longURL" type="text" placeholder="<%= longURL %>" style="width: 300px">
-      <input class="edit" type="submit" value="Update">
+      <input id="longURL" name="longURL" type="text" value="<%= longURL %>" style="width: 300px">
+      <button style="margin-top:15px" class="edit" type="submit" value="Update">Update <i class="fa fa-pencil" aria-hidden="true"></i>
+      </button>
     </form>
-    <form action ="/urls/<%=shortURL%>/delete" method="POST"><button class="delete">Delete</button></form>
-    <button id="returnHome" class="edit"><a class="edit" href="/urls"</a>Return home</button>
+    <form action ="/urls/<%=shortURL%>/delete" method="POST"><button style="width:87.5px" class="delete">Delete <i class="fa fa-trash-o"aria-hidden="true"></i></button></form>
+    </div>
+    <button style="margin-top:75px" id="returnHome" class="edit"><a class="edit" href="/urls"</a>Return home</button>
 </body>
 </html>
 
