Further css changes and revision of server code

--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -13,7 +13,7 @@
       <br>
       <input id="password" type="password" name="password" placeholder="password">
       <br>
-      <button class="edit" type="submit" value="submit">Submit</button>
+      <button style="width:173px" class="edit" type="submit" value="submit">Create Account</button>
     </form>
   </body>
 </html>
