--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 #header{
   margin-top: 25px;
-  margin-right:-500px;
-  width: 300px;
+  margin-right:-300px;
+  width: 500px;
   height: 30px;
   display: flex;
   flex-direction: row;
@@ -12,8 +12,8 @@
 
 #header2{
   margin-top: 25px;
-  margin-right:-500px;
-  width: 330px;
+  margin-right:-300px;
+  width: 500px;
   height: 30px;
   display: flex;
   flex-direction: row;
@@ -23,7 +23,9 @@
 }
 
 #username{
-
+  border: none;
+  width:400px;
+  text-align: right;
   display: flex;
   flex-direction: row;
   align-items: flex-end;
@@ -121,11 +123,6 @@ form{
 input{
   height:25px;
   color:#03A9F4;
-}
-
-#username{
-  border: none;
-  text-align: center;
 }
 
 .delete:hover{
