--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -13,7 +13,7 @@
       <br>
       <input id="password" type="password" name="password" placeholder="password">
       <br>
-      <button class="edit" type="submit" value="submit">Login</button>
+      <button style="width:173px" class="edit" type="submit" value="submit">Login</button>
     </form>
   </body>
 </html>
