--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -2,15 +2,16 @@
 <html lang="en">
   <head>
   <title>TinyApp</title>
+  <script src="https://use.fontawesome.com/c7d7b636c5.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="/stylesheets/style.css">
 </head>
   <body>
     <% include partials/_header %>
     <form style="margin-top:50px" action="/urls" method="POST" style="margin:150px;">
-      <label for="longURL">Enter a URL:</label>
+      <h2>Enter a new URL to shorten:</h2>
       <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
-      <input class="edit" type="submit" value="Submit">
+      <button class="edit" type="submit" value="Submit">Submit <i class="fa fa-plus" aria-hidden="true"></i></button>
     </form>
     <button id="returnHome" class="edit"><a class="edit" href="/urls"</a>Return home</button>
   </body>
